re PR rtl-optimization/11350 (undefined labels with -Os -fPIC)

PR opt/11350
        * cfgcleanup.c (try_optimize_cfg): Suppress tablejump removal
        after reload.
        * cfgrtl.c (try_redirect_by_replacing_branch): Likewise.

From-SVN: r75967